[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Title.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/lprabbits1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Cookies Big.res" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 1024
font_data = ExtResource( 2 )

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 27.2422, 49.2205 )
color = Color( 0.447059, 0.705882, 0.819608, 1 )

[node name="Rabbits" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Rabbit1" type="Label" parent="Rabbits"]
anchor_right = 1.0
margin_left = 70.0
margin_top = 360.0
margin_right = 1094.0
margin_bottom = 1361.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.4, 0.643137, 0.772549, 1 )
text = "E"

[node name="Rabbit2" type="Label" parent="Rabbits"]
margin_left = 20.0
margin_top = 360.0
margin_right = 1044.0
margin_bottom = 1361.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.196078, 0.47451, 0.623529, 1 )
text = "E"

[node name="Rabbit2Tween" type="Tween" parent="Rabbits"]

[node name="RabbitsEntryTween" type="Tween" parent="Rabbits"]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer2"]
margin_left = 36.0504
margin_top = 191.067
margin_right = 2073.05
margin_bottom = 576.067
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 3 )
text = "Rabbit Run"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Start Button" type="Button" parent="CanvasLayer2"]
margin_left = 281.193
margin_top = 1344.68
margin_right = 2330.19
margin_bottom = 1735.68
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_lock_": true
}
[connection signal="tween_all_completed" from="Rabbits/Rabbit2Tween" to="." method="onTweenTweenAllCompleted"]
[connection signal="pressed" from="CanvasLayer2/Start Button" to="." method="onStartButtonPressed"]
